Fix buildings overlapping

--- a/page/game/index.scss
+++ b/page/game/index.scss
@@ -8,9 +8,9 @@ ui-game {
 	ui-map {
 		--building-stroke-size: 2;
 		--building-stroke-color: #fff;
-		--building-fill-color: #444;
+		--building-fill-color: #fff4;
 
-		--map-stroke-size: 1;
+		--map-stroke-size: 2;
 		--map-stroke-color: #222;
 		--map-fill-color: #000;
 
